alignment adjustment for message box where resolved tick and date are shown

--- a/webplugin/scss/components/_km-rtl.scss
+++ b/webplugin/scss/components/_km-rtl.scss
@@ -25,6 +25,8 @@
     }
     .mck-contact-list .mck-cont-msg-date {
         padding-right: 1rem;
+        margin-right: auto;
+        margin-left: 0;
     }
     .mck-box .mck-contact-list .mck-row,
     .mck-msg-preview .mck-row {
